2013-05-05  6.8.5-5 Cristy  <quetzlzacatenango@image...>
  * Fix transient bug in the -separate option (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23335).

2013-05-01  6.8.5-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-4, SVN revision 12089.

2013-05-01  6.8.5-4 Cristy  <quetzlzacatenango@image...>
  * Add DeleteImageArtifact() for jpeg:extent artifact (thanks to
    Jimmy Xie @ Microsoft).
  * Track morphology changes per thread to avoid a critical section.

2013-04-28  6.8.5-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-3, SVN revision 12025.

2013-04-29  6.8.5-3 Cristy  <quetzlzacatenango@image...>
  * Add DeleteImageArtifact() for jpeg:extent artifact (thanks to
    Jimmy Xie @ Microsoft).
  * Add support for JXR / WDP image format.

2013-04-28  6.8.5-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-2, SVN revision 12013.

2013-04-28  6.8.5-2 Cristy  <quetzlzacatenango@image...>
  * Use GetImageOption() for webp options (e.g. webp:lossless).

2013-04-27  6.8.5-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-1, SVN revision 12000.

2013-04-26  6.8.5-1 Cristy  <quetzlzacatenango@image...>
  * Recognize xc:gray50 is non-linear.
  * Loop over read() until requested bytes are consumed (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=23268).
  * Don't use gamma lookup map when HDRI is enabled.

2013-04-24  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-0, SVN revision 11979.

2013-04-16  6.8.5-0 Glenn Randers-Pehrson <glennrp@image...>
  * Handle benign errors as warnings in the PNG coder.

2013-04-16  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * Don't modify channel values for -separate (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23193).
  * The -adaptive-sharpen option is now sharpening properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23211).